tests/semantic/invalid/scope_violation.mc
{
    int local = 1;
}
print local;
